Satyn Velankar 26SEP2016

--- a/app/pod/dashboard/dailyrevenue/rooms/template.hbs
+++ b/app/pod/dashboard/dailyrevenue/rooms/template.hbs
@@ -1,5 +1,4 @@
 <br/>
-<br/>
-<h2>rooms</h2>
-{{hoppr-grid height="500px" width="1900px" showColumnsDropdown="true"}}
+{{dashboard.dailyrevenue.stats-container collapsed=prefs.toggle.stats}}
+{{dashboard.dailyrevenue.grid-container collapsed=prefs.toggle.grid}}
 {{outlet}}
