--- a/app/pod/components/dashboard/dailyrevenue/grid-container/template.hbs
+++ b/app/pod/components/dashboard/dailyrevenue/grid-container/template.hbs
@@ -1,7 +1,7 @@
 GRID!!
 <div class="grid-container">
 <button {{action "toggle" "grid" on="mouseUp"}}> ✓ </button>
-{{hoppr-grid height="400px" width="500px"}}	
+{{hoppr-grid height="400px" width="500px" options=gridOptions}}	
 
 {{#if collapsed}}
 	Collapsed
